--- a/src/cascadia/TerminalSettingsEditor/Compatibility.xaml
+++ b/src/cascadia/TerminalSettingsEditor/Compatibility.xaml
@@ -26,13 +26,15 @@
 
     <StackPanel Style="{StaticResource SettingsStackStyle}">
         <!--  Allow Headless  -->
-        <local:SettingContainer x:Uid="Globals_AllowHeadless">
+        <local:SettingContainer x:Uid="Globals_AllowHeadless"
+                                x:Name="AllowHeadless">
             <ToggleSwitch IsOn="{x:Bind ViewModel.AllowHeadless, Mode=TwoWay}"
                           Style="{StaticResource ToggleSwitchInExpanderStyle}" />
         </local:SettingContainer>
 
         <!--  Text Measurement  -->
-        <local:SettingContainer x:Uid="Globals_TextMeasurement">
+        <local:SettingContainer x:Uid="Globals_TextMeasurement"
+                                x:Name="TextMeasurement">
             <ComboBox AutomationProperties.AccessibilityView="Content"
                       ItemTemplate="{StaticResource EnumComboBoxTemplate}"
                       ItemsSource="{x:Bind ViewModel.TextMeasurementList}"
@@ -42,13 +44,15 @@
 
         <!--  Debug Features  -->
         <local:SettingContainer x:Uid="Globals_DebugFeaturesEnabled"
+                                x:Name="DebugFeaturesEnabled"
                                 Visibility="{x:Bind ViewModel.DebugFeaturesAvailable}">
             <ToggleSwitch IsOn="{x:Bind ViewModel.DebugFeaturesEnabled, Mode=TwoWay}"
                           Style="{StaticResource ToggleSwitchInExpanderStyle}" />
         </local:SettingContainer>
 
         <!--  Reset Application State  -->
-        <local:SettingContainer x:Uid="Settings_ResetApplicationState">
+        <local:SettingContainer x:Uid="Settings_ResetApplicationState"
+                                x:Name="ResetApplicationState">
             <Button x:Uid="Settings_ResetApplicationStateButton"
                     Style="{StaticResource DeleteButtonStyle}">
                 <Button.Flyout>
@@ -69,7 +73,8 @@
         </local:SettingContainer>
 
         <!--  Reset to Default Settings  -->
-        <local:SettingContainer x:Uid="Settings_ResetToDefaultSettings">
+        <local:SettingContainer x:Uid="Settings_ResetToDefaultSettings"
+                                x:Name="ResetToDefaultSettings">
             <Button x:Uid="Settings_ResetToDefaultSettingsButton"
                     Style="{StaticResource DeleteButtonStyle}">
                 <Button.Flyout>
